Sat, Dec 21, 2008
---------------------------------------------------------------------
- Redesigned [Lead/New] and revamped related CSS styles.
- Reorganized global settings to make it easier to access them at runtime.

Sat, Dec 20, 2008
---------------------------------------------------------------------
- Metallica show at Oakland Coliseum was totally amazing!

Fri, Dec 19, 2008
---------------------------------------------------------------------
- Replaced stub text fields with autocomplete in [Leads/New].

Thu, Dec 18, 2008
---------------------------------------------------------------------
- Implemented ratings JavaScript library to show star ratings.
- Updated [leads] schema, more polishing for [Leads/New] form.

Wed, Dec 17, 2008
---------------------------------------------------------------------
- Added flash confirmation messages for deletes.
- Work on [Leads/New] form (campaign autocomplete, etc.)

Tue, Dec 16, 2008
---------------------------------------------------------------------
- Updated designs for leads, campaigns, and opportunities using left-hand strips.
- Implemented new design for accounts index page.

Mon, Dec 15, 2008
---------------------------------------------------------------------
- More work on leads index page.
- Added leads fixture that uses [faker] gem.
- Restructured status settings to use :label and :color.

Sun, Dec 14, 2008
---------------------------------------------------------------------
- Work on leads schema, model, and fixtures.

Sat, Dec 13, 2008
---------------------------------------------------------------------
- Insalled [annotate_models] plugin and generated model annotations.
- Generated campaign fixtures.
- Updated [Campaign] model to include actual vs. targets.
- Added permissions to [Campaign/New].
- Cleaned up specs and fixtures.

Thu, Dec 11, 2008
---------------------------------------------------------------------
- New tableless design for campaign index page.
- Added new .list CSS styles.